--- a/package.json
+++ b/package.json
@@ -15,19 +15,22 @@
     "@types/react-dom": "18.0.9"
   },
   "dependencies": {
+    "@chain-registry/types": "^0.18.0",
     "@cosmjs/cosmwasm-stargate": "0.31.1",
     "@cosmjs/stargate": "0.31.1",
     "@cosmos-kit/react": "2.10.9",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@interchain-ui/react": "^1.21.16",
+    "@reduxjs/toolkit": "^2.2.1",
     "chain-registry": "1.25.4",
     "cosmos-kit": "2.8.6",
     "framer-motion": "9.0.7",
     "next": "^13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.6.0"
+    "react-icons": "4.6.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
